--- a/fichatecnica.html
+++ b/fichatecnica.html
@@ -264,7 +264,23 @@ button:disabled{opacity:.6;cursor:not-allowed}
   .kpis{grid-template-columns:1fr}
 }
 
+/* FORM GRID (campos lado a lado quando couber) */
+.form-grid{
+  display:grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap:14px 12px;
+  margin-top:10px;
+}
 
+.form-grid .field{
+  display:flex;
+  flex-direction:column;
+}
+
+/* Ajuste de margem do label dentro do grid */
+.form-grid .field label{
+  margin-top:0;
+}
 
 
 
@@ -296,25 +312,37 @@ button:disabled{opacity:.6;cursor:not-allowed}
 <input id="buscarFicha" placeholder="Digite o nome do prato...">
 <div id="listaFichas" class="lista"></div>
 
-  <label>NOME DO PRATO</label>
-  <input id="nomePrato">
+<div class="form-grid">
 
-  <label>TIPO DO PRATO</label>
-  <select id="tipoPrato">
-    <option value="">SELECIONE</option>
-    <option>PRATO PRINCIPAL</option>
-    <option>ENTRADA</option>
-    <option>SOBREMESA</option>
-    <option>DRINK</option>
-    <option>SUSHI</option>
-    <option>ACOMPANHAMENTO</option>
-  </select>
+  <div class="field">
+    <label>NOME DO PRATO</label>
+    <input id="nomePrato">
+  </div>
 
-  <label>PREÇO DE VENDA</label>
-  <input id="precoVenda" type="number" step="0.01">
+  <div class="field">
+    <label>TIPO DO PRATO</label>
+    <select id="tipoPrato">
+      <option value="">SELECIONE</option>
+      <option>PRATO PRINCIPAL</option>
+      <option>ENTRADA</option>
+      <option>SOBREMESA</option>
+      <option>DRINK</option>
+      <option>SUSHI</option>
+      <option>ACOMPANHAMENTO</option>
+    </select>
+  </div>
 
-  <label>RENDIMENTO FINAL (PORÇÕES)</label>
-  <input id="rendimentoFinal" type="number" value="1" min="1">
+  <div class="field">
+    <label>PREÇO DE VENDA</label>
+    <input id="precoVenda" type="number" step="0.01">
+  </div>
+
+  <div class="field">
+    <label>RENDIMENTO FINAL (PORÇÕES)</label>
+    <input id="rendimentoFinal" type="number" value="1" min="1">
+  </div>
+
+</div>
 
   <label>FOTO DO PRATO</label>
   <input type="file" id="fotoProduto" accept="image/*">
